--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,7 +39,7 @@ layout: table_wrappers
         <path d="M13 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V9z"></path><polyline points="13 2 13 9 20 9"></polyline>
       </svg>
     </symbol>
-  
+    {% include icons/external_link.html %}
   </svg>
 
   <div class="side-bar">
@@ -95,7 +95,7 @@ layout: table_wrappers
       {{ nav_footer_custom }}
     {% else %}
       <footer class="site-footer">
-        This site uses <a href="https://github.com/just-the-docs/just-the-docs">Just the Docs</a>, a documentation theme for Jekyll.
+        This site uses <a href="">Just the Docs</a>, a documentation theme for Jekyll.
       </footer>
     {% endif %}
   </div>
