--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -95,7 +95,7 @@ layout: table_wrappers
       {{ nav_footer_custom }}
     {% else %}
       <footer class="site-footer">
-        This site uses <a href="">Just the Docs</a>, a documentation theme for Jekyll.
+        This site uses Just the Docs, a documentation theme for Jekyll.
       </footer>
     {% endif %}
   </div>
